kubernetes/apps/observability/headlamp/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: observability
spec:
  hostnames: ["headlamp.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-oauth-admin
      namespace: network
      sectionName: https
  rules:
    - name: oidc-callback
      backendRefs:
        - name: headlamp
          namespace: observability
          port: 80
      matches:
        - path:
            type: Exact
            value: /oidc-callback
    - name: app
      backendRefs:
        - name: headlamp
          namespace: observability
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
