kubernetes/apps/observability/headlamp/app/securitypolicy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: headlamp-oidc-callback-public
  namespace: observability
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: headlamp
      sectionName: oidc-callback
  authorization:
    defaultAction: Allow
